# text_from_video

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: text_from_video.py
src/text_from_video/: text_from_video.py
