[project]
name = "text_from_video"
version = "0.1.0"
description = "Transcribes text from a video using whisper and moviepy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "os",
    "moviepy",
    "tempfile",
    "whisper"
]
[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"