[project]
name = "text_from_video"
version = "0.1.0"
description = "Transcribes text from a video using whisper and moviepy"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "moviepy",
    "whisper"
]
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"